--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    W: Accelerate
-			A: Rotate Spaceship Counterclockwise
-			D: Rotate Spaceship Clockwise
+		    W: Accelerate <br>
+			A: Rotate Spaceship Counterclockwise <br>
+			D: Rotate Spaceship Clockwise <br>
 			H: Hyperspace
 	    </footer>
 	</body>
