--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    W: Accelerate <br>
+		    W: Accelerate Forward<br>
 			A: Rotate Spaceship Counterclockwise <br>
 			D: Rotate Spaceship Clockwise <br>
-			H: Hyperspace
+			H: Hyperspace <br>
+			S: Accelerate Backward
 	    </footer>
 	</body>
 </html>
